Fix Password field alignment on Firefox

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -2570,7 +2570,7 @@ form .tabs {
     align-items: center;
 
     label { flex: 0 100px; }
-    input { flex: 1 0; }
+    input { flex: 1 0 calc(100% - 100px); }
     .description { flex: 1 auto; }
   }
   .g-recaptcha > div > div {
